# homesoil

./: .env  .env.example  .gitignore  Cargo.toml  docker-compose.yml
migrations/2023-12-12-112317_create_sensors/: up.sql
migrations/2023-12-13-091935_create_sensor_reads/: down.sql  up.sql
migrations/2023-12-18-145817_create_actuators/: down.sql  up.sql
migrations/2024-01-18-085626_create_scripts_table/: down.sql  up.sql
src/: actuator_handlers.rs  actuator_methods.rs  client.rs  condition_parser.rs  db.rs  events.rs  handlers.rs  helper.rs  lib.rs  main.rs  models.rs  observer.rs  schema.rs  script_methods.rs  script_parser.rs  sensor_handlers.rs  sensor_methods.rs  sensor_models.rs  sensor_types.rs  sensors.rs  server.rs  servers.rs  socket.rs
src/message/: mod.rs
