[package]
name = "homesoil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coap = "0.13.0"
coap-lite = "0.11.3"
anyhow = "1.0.75"
tokio = { version = "1.0.0", features = ["full"] }
diesel = { version = "2.1.4", features = ["mysql"] }
mysql = "24.0.0"
dotenv = "0.15.0"
json = "0.12.4"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
