[package]
name = "homesoil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.1.4", features = ["mysql"] }
mysql = "24.0.0"
dotenv = "0.15.0"
json = "0.12.4"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
futures-util = "0.3.29"
coap-lite = "0.11.3"
socketioxide = { version = "0.8.0", features = ["state"] }
futures = "0.3.29"
log = "0.4.20"
tokio-stream = "0.1.14"
lru_time_cache = "0.11.11"
url = "2.5.0"
regex = "1.10.2"
tokio-util = { version = "0.7.10", features = ["full"] }
bytes = "1.5.0"
axum = "0.6.20"
